# fiocz-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: import.rs  last_statement_id.rs  merchant.rs  movements_in_period.rs  movements_since_last.rs  set_bookmark.rs  statements.rs  workflow.rs
src/: client.rs  error.rs  lib.rs  validation.rs
src/types/: account_statement.rs  import_response.rs  merchant.rs  mod.rs  transaction.rs
src/types/transaction/: mod.rs  xml.rs
