[package]
name = "fiocz-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.34"
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
serde_json = "1.0.85"
serde-xml-rs = { path = "../serde-xml-rs" }

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.10"
features = ["full"]

[dev-dependencies]
env_logger = "0.9.0"