[package]
name = "fiocz-rs"
version = "0.2.0"
edition = "2021"
description = "A Rust client for the FIO API"
repository = "https://github.com/aknarts/fiocz-rs"
license = "MIT"
readme = "README.md"
keywords = ["fio", "api", "client", "bank"]
categories = ["finance", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.34"
reqwest = { version = "0.11.11", features = ["json", "multipart"] }
serde_json = "1.0.85"
rust_decimal = { version = "1.33.1", features = ["serde-float"] }
log = { version = "0.4.20", features = [] }

[dependencies.serde]
version = "1.0.144"
features = ["derive"]

[dev-dependencies.tokio]
version = "1.10"
features = ["full"]

[dev-dependencies]
env_logger = "0.10.1"