[package]
name = "fiocz-rs"
version = "0.4.0"
edition = "2021"
description = "A Rust client for the FIO API"
repository = "https://github.com/aknarts/fiocz-rs"
license = "MIT"
readme = "README.md"
keywords = ["fio", "api", "client", "bank"]
categories = ["finance", "api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde_json = "1"
rust_decimal = { version = "1.34", features = ["serde-float"] }
log = { version = "0.4", features = [] }

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[dev-dependencies]
env_logger = "0.11"
